update for purepress 0.2.0

--- a/templates/discuss-thread.html
+++ b/templates/discuss-thread.html
@@ -1,4 +1,4 @@
-{% if config.DISQUS_ENABLED %}
+{% if user_config.disqus_enabled %}
 <div class="article discuss-thread" id="discuss-thread">
   <h2>评论</h2>
   {% include 'discuss/disqus.html' %}
