--- a/static/style.css
+++ b/static/style.css
@@ -147,19 +147,16 @@ img {
 
 .content {
     position: relative;
-    overflow: hidden;
 }
 
-/* .content h1 a.anchor::before, .content h2 a.anchor::before, .content h3 a.anchor::before, .content h4 a.anchor::before, .content h5 a.anchor::before, .content h6 a.anchor::before {
-    display: none;
+.content h1 a.anchor::before, .content h2 a.anchor::before, .content h3 a.anchor::before, .content h4 a.anchor::before, .content h5 a.anchor::before, .content h6 a.anchor::before {
+    display: inline;
     content: "#";
     position: absolute;
-    transform: translateX(-0.65em);
+    transform: translateX(-0.92em);
+    color: #aaa;
+    font-weight: 400;
 }
-
-.content h1:hover a.anchor::before, .content h2:hover a.anchor::before, .content h3:hover a.anchor::before, .content h4:hover a.anchor::before, .content h5:hover a.anchor::before, .content h6:hover a.anchor::before {
-    display: inline;
-} */
 
 .content h1 {
     font-size: 1.8em;
@@ -223,7 +220,7 @@ img {
 .content.limit-height {
     max-height: 240px;
     text-overflow: ellipsis;
-    /* overflow: hidden; */
+    overflow-y: hidden;
 }
 
 .content .hide-article-box {
