--- a/static/style.css
+++ b/static/style.css
@@ -178,17 +178,15 @@ img {
     background-color: inherit;
 }
 
-/* .content *:not(pre) code {
-    padding: 0.25rem 0.5rem;
-    margin: 0;
-    font-size: 0.85em;
-    background-color: rgba(27, 31, 35, 0.05);
-    border-radius: 3px;
+.content *:not(pre) code {
+    padding: 0.22em 0.4em;
+    background-color: rgba(27, 31, 35, 0.06);
+    border-radius: 0.2em;
 }
 
-.content code:not(a code) {
+.content *:not(pre):not(a) code {
     color: #476582;
-} */
+}
 
 .content table {
     border-collapse: collapse;
