--- a/static/style.css
+++ b/static/style.css
@@ -180,8 +180,9 @@ img {
 
 .content *:not(pre) code {
     padding: 0.22em 0.4em;
-    background-color: rgba(27, 31, 35, 0.06);
+    background-color: rgba(27, 31, 35, 0.04);
     border-radius: 0.2em;
+    border: 1px solid #ddd;
 }
 
 .content *:not(pre):not(a) code {
