include body_head.html at the head of layout body

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  {% include ['custom/body_head.html', 'body_head.html'] ignore missing %}
 
   <div class="container">
     <header class="row header">
