update for purepress 0.5.0

--- a/templates/404.html
+++ b/templates/404.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 {{ super() }}
-<title>{{ 'Page Not Found - ' + site.title }}</title>
+<title>{{ 'Page Not Found - ' + global.site.title }}</title>
 {% endblock %}
 
 {% block main %}
