--- a/templates/archive.html
+++ b/templates/archive.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 {{ super() }}
-<title>{{ archive.name + ' - ' + archive.type + ' - ' + site.title }}</title>
+<title>{{ archive.name + ' - ' + archive.type + ' - ' + global.site.title }}</title>
 {% endblock %}
 
 {% block main %}
