--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
 <div class="column">
-  <p>Copyright &copy; 2020 {{ site.author }}. </p>
+  <p>Copyright &copy; 2020 {{ global.site.author }}. </p>
   <span>Powered by <a href="https://github.com/richardchien/purepress">PurePress</a>.</span>
 </div>
