--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 {{ super() }}
-<title>{{ site.title }}</title>
+<title>{{ global.site.title }}</title>
 {% endblock %}
 
 {% block main %}
