--- a/templates/discuss-thread.html
+++ b/templates/discuss-thread.html
@@ -1,4 +1,4 @@
-{% if user_config.disqus_enabled %}
+{% if global.config.disqus_enabled %}
 <div class="article discuss-thread" id="discuss-thread">
   <h2>评论</h2>
   {% include 'discuss/disqus.html' %}
