--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@ body {
     background-color: #f6f6f7;
     color: #2c3e50;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Noto Sans', 'Open Sans', 'Helvetica Neue', 'Noto Sans SC Regular', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Dengxian', 'Wenquanyi Micro Hei', 'WenQuanYi Zen Hei', sans-serif;
-    line-height: 1.2;
+    line-height: 1.65;
     -ms-word-wrap: break-word;
     word-wrap: break-word;
     word-break: normal;
@@ -19,11 +19,7 @@ a {
     transition: 0.1s all ease;
 }
 
-p {
-    line-height: 1.7;
-}
-
-ul, ol, pre {
+pre {
     line-height: 1.5;
 }
 
