--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@ body {
     background-color: #f6f6f7;
     color: #2c3e50;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Noto Sans', 'Open Sans', 'Helvetica Neue', 'Noto Sans SC Regular', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Dengxian', 'Wenquanyi Micro Hei', 'WenQuanYi Zen Hei', sans-serif;
-    line-height: 1.65;
+    line-height: 1.3;
     -ms-word-wrap: break-word;
     word-wrap: break-word;
     word-break: normal;
@@ -19,7 +19,7 @@ a {
     transition: 0.1s all ease;
 }
 
-pre {
+ul, ol, pre {
     line-height: 1.5;
 }
 
@@ -143,6 +143,7 @@ img {
 
 .content {
     position: relative;
+    line-height: 1.66;
 }
 
 .content h1 a.anchor::before, .content h2 a.anchor::before, .content h3 a.anchor::before, .content h4 a.anchor::before, .content h5 a.anchor::before, .content h6 a.anchor::before {
@@ -168,6 +169,7 @@ img {
     color: #dcdccc;
     border-radius: 10px;
     padding: 1.25em 1.5em;
+    line-height: 1.5;
 }
 
 .content code.hljs {
