--- a/templates/page.html
+++ b/templates/page.html
@@ -13,6 +13,11 @@
   <h1 class="article-title">{{ entry.title }}</h1>
   {% include ['custom/meta.html', 'meta.html'] ignore missing %}
   <div class="content">
+    {% if entry.toc %}
+    <nav>{{ entry.toc_html | safe }}</nav>
+    <hr>
+    {% endif %}
+
     {{ entry.content | safe }}
   </div>
 </article>
