--- a/static/style.css
+++ b/static/style.css
@@ -162,6 +162,23 @@ img {
     line-height: 1.66;
 }
 
+.content p {
+    text-align: justify;
+}
+
+.content li>p {
+    text-align: unset;
+    margin: 0.5em 0;
+}
+
+.content a.footnote-ref::before {
+    content: '[';
+}
+
+.content a.footnote-ref::after {
+    content: ']';
+}
+
 .content pre {
     display: block;
     overflow-x: auto;
@@ -180,7 +197,7 @@ img {
 }
 
 .content *:not(pre) code {
-    padding: 0.22em 0.4em;
+    padding: 0.15em 0.3em;
     background-color: rgba(27, 31, 35, 0.04);
     border-radius: 0.2em;
     border: 1px solid #ddd;
@@ -215,6 +232,14 @@ img {
     border-left: 0.25rem solid #dfe2e5;
     margin-left: 0;
     padding-left: 1rem;
+}
+
+.content hr {
+    margin: 1.5em 0;
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .content.limit-height {
@@ -329,22 +354,27 @@ img {
     .page {
         flex-direction: column;
     }
+
     .site-title {
         padding: 60px 0 40px 0;
     }
+
     .page {
         padding: 0 20px;
     }
+
     .sidebar {
         order: 1;
         margin-left: 0;
         width: 100%;
     }
+
     .main {
         order: 2;
         margin-top: 40px;
         width: 100%;
     }
+
     .sidebar .widget.hidden-mobile {
         display: none;
     }
@@ -386,18 +416,23 @@ img {
         overflow: visible !important;
         position: absolute;
     }
+
     .header, .sidebar, .footer, .discuss-thread, .anchor, .meta, .hidden-print {
         display: none !important;
     }
+
     .main {
         width: 100% !important;
     }
+
     .article {
         padding: 0 !important;
     }
+
     .article a {
         color: #2c3e50 !important;
     }
+
     .content {
         display: block !important;
         overflow: visible !important;
@@ -405,6 +440,7 @@ img {
         height: auto !important;
         width: auto !important;
     }
+
     @page {
         size: auto !important;
         margin: auto !important;
